# bazel-tools

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  jq.bazel  oniguruma.bazel  package.bzl
examples/: BUILD.bazel  palic.json
