# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:defs.bzl", "json_extract", "json_test")

# Extract a field from a JSON file.
json_extract(
    name = "palic_wkt",
    srcs = ["palic.json"],
    query = ".geometry",
    raw = True,
    suffix = ".wkt",
)

# Validate the syntax of all JSON files. To test it, run:
# bazel test :json_test
json_test(
    name = "json_test",
    srcs = glob(["*.json"]),
)
